force-app/main/default/objects/APT_Pricing_Data__c/APT_Pricing_Data__c.object-meta.xml
<CustomObject>
    <label>Pricing Data</label>
    <nameField>
        <displayFormat>PD-{00000}</displayFormat>
        <label>Pricing Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>