force-app/main/default/objects/APT_Pricing_Data__c/fields/APT_Pricing_Data_Mapping__c.field-meta.xml
<CustomField>
    <fullName>APT_Pricing_Data_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Data Mapping</label>
    <referenceTo>APT_Pricing_Data_Mapping__c</referenceTo>
    <relationshipLabel>Pricing Data</relationshipLabel>
    <relationshipName>Pricing_Data</relationshipName>
    <type>Lookup</type>
</CustomField>