force-app/main/default/objects/APT_Pricing_Data__c/fields/APT_Pricing_Value_12__c.field-meta.xml
<CustomField>
    <fullName>APT_Pricing_Value_12__c</fullName>
    <label>Pricing Value 12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>