force-app/main/default/objects/APT_Pricing_Data__c/fields/APT_Product__c.field-meta.xml
<CustomField>
    <fullName>APT_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product Lookup</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Pricing Data</relationshipLabel>
    <relationshipName>Pricing_Data</relationshipName>
    <type>Lookup</type>
</CustomField>