force-app/main/default/objects/APT_Pricing_Data__c/listViews/All_Pricing_Data.listView-meta.xml
<ListView>
    <fullName>All_Pricing_Data</fullName>
    <columns>APT_Product__c</columns>
    <columns>NAME</columns>
    <columns>APT_Pricing_Data_Mapping__c</columns>
    <columns>APT_Pricing_Value_1__c</columns>
    <columns>APT_Pricing_Value_2__c</columns>
    <columns>APT_Pricing_Value_3__c</columns>
    <columns>APT_Pricing_Value_4__c</columns>
    <columns>APT_Pricing_Value_5__c</columns>
    <columns>APT_Pricing_Value_6__c</columns>
    <columns>APT_Pricing_Value_7__c</columns>
    <columns>APT_Pricing_Value_8__c</columns>
    <columns>APT_Pricing_Value_9__c</columns>
    <columns>APT_Pricing_Value_10__c</columns>
    <columns>APT_Pricing_Value_11__c</columns>
    <columns>APT_Pricing_Value_12__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>APT_Product__c</field>
        <operation>equals</operation>
        <value>Next Flight Tier 4</value>
    </filters>
    <label>All Pricing Data</label>
    <language>en_US</language>
</ListView>