force-app/main/default/objects/APT_Pricing_Data__c/listViews/myView_EXPRESS_DOCT.listView-meta.xml
<ListView>
    <fullName>myView_EXPRESS_DOCT</fullName>
    <columns>NAME</columns>
    <columns>APT_Pricing_Value_1__c</columns>
    <columns>APT_Pricing_Value_2__c</columns>
    <columns>APT_Pricing_Value_3__c</columns>
    <columns>APT_Pricing_Value_4__c</columns>
    <columns>APT_Pricing_Value_5__c</columns>
    <columns>APT_Pricing_Value_6__c</columns>
    <columns>APT_Pricing_Value_7__c</columns>
    <columns>APT_Pricing_Value_8__c</columns>
    <columns>APT_Pricing_Value_9__c</columns>
    <columns>APT_Pricing_Value_10__c</columns>
    <columns>APT_Pricing_Value_11__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>APT_Pricing_Value_12__c</field>
        <operation>equals</operation>
        <value>Zone1</value>
    </filters>
    <filters>
        <field>APT_Pricing_Value_4__c</field>
        <operation>equals</operation>
        <value>EXPRESS_DOCT</value>
    </filters>
    <label>myView EXPRESS_DOCT</label>
    <language>en_US</language>
</ListView>